--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -7,7 +7,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>
   </ion-navbar>
-  <ion-card class="Hora">
+  <ion-card class="Data">
   Data/
 </ion-card>
 </ion-header>
@@ -15,7 +15,7 @@
 <ion-content class="background">
 
   <ion-card class="card">
-    <ion-item-group >
+    <ion-item-group class="Hora" >
       Hora!
     </ion-item-group>
   <ion-grid>
@@ -33,7 +33,23 @@
         </ion-list>
       </ion-col>
     </ion-row>
+    <ion-item-group class="betscasas">
+    <ion-grid>
+      <ion-row>
+        <ion-col class="BA">
+          Bet A
+        </ion-col>
+        <ion-col class="BB">
+          Bet B
+        </ion-col>
+        <ion-col class="BC">
+          Bet C
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item-group>
   </ion-grid>
+
 
   </ion-card>
 </ion-content>
