--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -22,7 +22,7 @@
     <ion-row>
       <ion-col  class="times" >
         <ion-list >
-          <ion-item-group>Time A x Time B</ion-item-group>
+          <ion-item-group>Time C x Time B</ion-item-group>
           <ion-item-group>0x0</ion-item-group>
         </ion-list>
       </ion-col>
